# Positron

./: .gitignore  Box.py  CONTRIBUTING.md  CSS.py  ContextMenu.py  Element.py  ElementAttribute.py  ElementAttribute.pyi  EventManager.py  J.py  Media.py  README.md  Selector.py  Selectors.py  Style.py  StyleComputing.py  TextLayout.py  WeakCache.py  _BoxLayout.py  _TextLayout.py  check.bat  config.py  main.py  mypy.ini  own_css_parser.py  own_types.py  parse_html.py  pg_util.py  pyproject.toml  pytest.ini  regexes.melody  requirements.txt  rounded_box.py  run.bat  style_cache.py  test_all.py  util.py
.github/: run_tests.yml
.github/workflows/: run-test.yml  visualize.yml
examples/: README.md
examples/access_key_emulation/: __init__.py  first_page.html  second_page.html
examples/async/: index.html  main.py  style.css
examples/calculator/: __init__.py  index.html  main.py  style.css
examples/features/: __init__.py  first.html  hack.html  main.py  second.jinja  style.css
examples/key_logger/: main.py
examples/markdown/: main.py  markdown.html  markdown.md
howto/: Element.md  EventManager.md  InputElement.md  Layout.py  README.md  TextInput.md  trash.py
howto/CSS/: Box.md  Idea_CSS_Modules.md  Internal_Attribute_Specs.md  Overwiew.md  References.md  Selectors.md  Shorthands.md  StyleInvalidation.md  Stylesheets.md
howto/elements/: AudioElement.md
positron/: Box.py  Element.py  EventManager.py  J.py  Media.py  README.md  Selector.py  Style.py  check.bat  config.py  main.py  mypy.ini  own_types.py  style.css  test_all.py  util.py
positron/element/: ElementAttribute.py
positron/examples/access_key_emulation/: __init__.py  index.html
positron/examples/calculator/: __init__.py  index.html  style.css
positron/examples/calculator/math_parser/: __init__.py  explicit.py  implicit.py  test_parser.py
positron/examples/features/: __init__.py
positron/modals/: Alert.py  ContextMenu.py  Modal.py  __init__.py
positron/style/: MediaQuery.py  Parser.py  itemgetters.py
positron/utils/: Console.py  FileWatcher.py  Navigator.py  colors.py  regex.py  rounded.py
src/: pyproject.toml
src/positron/: Box.py  Element.py  EventManager.py  J.py  Media.py  README.md  Selector.py  Style.py  __init__.py  __main__.py  config.py  main.py  mypy.ini  own_types.py  test_all.py  types.py  util.py
src/positron/components/: __init__.py
src/positron/element/: ElementAttribute.py  ElementAttribute.pyi  InputTypes.py  Overflow.py  Parser.py
src/positron/element/layout/: __init__.py  text_align.py  vertical_align.py
src/positron/events/: InputType.py
src/positron/modals/: Alert.py  ContextMenu.py  Modal.py  __init__.py
src/positron/style/: MediaQuery.py  Parser.py  itemgetters.py
src/positron/utils/: Console.py  FileWatcher.py  History.py  Navigator.py  __init__.py  aio.py  clipboard.py  colors.py  fonts.py  func.py  markdown.py  pg.py  regex.py  rounded.py
tests/: test_all.py  test_event_input_types.py  test_layout.py  test_style_processing.py  test_text_align.py  test_utils.py  user_tests.py
