[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "positron"
version = "0.0.0"
authors = [
  { name="Rashid Harvey", email="rashid.harvey@fu-berlin.de" },
]
description = "An amazing self-made Browser for building simple, robust and fast Python GUI applications with CSS and jinja-flavoured HTML"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "tinycss     == 0.4",
    "pygame      == 2.1.3",
    "watchdog    == 2.2.1",
    "frozendict  == 2.3.4",
    "html5lib    == 1.1",
    "numpy       == 1.24.2",
    "aiohttp     == 3.8.4",
    "aiodns      == 3.0.0",
    "cchardet    == 2.1.7",
    "Jinja2      == 3.1.2",
]

[project.optional-dependencies]
console = ["aioconsole  == 0.5.0"]

markdown = ["mistune == 2.0.5"]

examples = [
    "math_evaluator == 0.0.2",
    "mistune == 2.0.5"
]

dev = [
    "pytest         == 7.2.1", 
    "pytest-asyncio == 0.20.3",
    "black          == 23.1.0",
    "mypy           == 1.0.1"
]

all = [
    "aioconsole  == 0.5.0",
    "math_evaluator == 0.0.2",
    "mistune == 2.0.5",
    "pytest         == 7.2.1", 
    "pytest-asyncio == 0.20.3",
    "black          == 23.1.0",
    "mypy           == 1.0.1"
]

[project.urls]
"Homepage" = "https://github.com/theRealProHacker/Positron"
"Bug Tracker" = "https://github.com/theRealProHacker/Positron/issues"

[tool.ruff]

ignore = [
    "E402",
    "F401", # unused import
    "F403",
    "F405",
    "F901", # just wrong, should be disabled by default
    # Not sure
    "E731", # lambda expressions
    "E741", # ambiguous var name, whatever that means?
    "E501", # black already takes care of this
]