[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "positron"
version = "0.0.0"
authors = [
  { name="Rashid Harvey", email="rashid.harvey@fu-berlin.de" },
]
description = "An amazing self-made Browser for building simple, robust and fast Python GUI applications with CSS and jinja-flavoured HTML"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "tinycss     == 0.4",
    "pygame      == 2.5.2",
    "watchdog    >= 3.0.0, < 4",
    "frozendict  == 2.3.4",
    "html5lib    == 1.1",
    "numpy       >= 1.26.1, < 2",
    "aiohttp     >= 3.9.3, < 4",
    "aiodns      >= 3.1.1, < 4",
    "Jinja2      == 3.1.3",
]

[project.optional-dependencies]
console = ["aioconsole  == 0.7.0"]

markdown = ["mistune == 3.0.2"]

examples = [
    "math_evaluator == 0.0.2",
    "mistune == 3.0.2"
]

dev = [
    "pytest         == 7.2.1", 
    "pytest-asyncio == 0.20.3",
    "black          == 23.1.0",
    "mypy           == 1.0.1",
    "types-html5lib",
]

all = [
    "aioconsole     == 0.7.0",
    "math_evaluator == 0.0.3",
    "mistune        == 3.0.2",
    "pytest         == 8.1.0", 
    "pytest-asyncio >= 0.23, < 0.24",
    "black          == 23.1.0",
    "mypy           == 1.0.1"
]

[project.urls]
"Homepage" = "https://github.com/theRealProHacker/Positron"
"Bug Tracker" = "https://github.com/theRealProHacker/Positron/issues"

[tool.mypy]

# so sweet together
disable_error_code = "annotation-unchecked"
warn_no_return = false

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

exclude = "concepts|venv"
namespace_packages = true

[[tool.mypy.overrides]]
module = "positron.*"
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "watchdog",
    "tinycss.*",
    "aioconsole",
    "html5lib",
    "mistune",
    "vlc"
]

ignore_missing_imports = true

[tool.ruff]

lint.ignore = [
    "E402",
    "F401", # unused import
    "F403",
    "F405",
    "F901", # just wrong, should be disabled by default
    # Not sure
    "E731", # lambda expressions
    "E741", # ambiguous var name, whatever that means?
    "E501", # black already takes care of this
]

[tool.refurb]

ignore = [
    123, # .copy() instead of dict()
    126, # return in else
    141, # Path 
]

[tool.pytest.ini_options]
# https://stackoverflow.com/a/73499640/15046005
asyncio_mode = "auto"
addopts = "-s"